--- a/Aplicaciones/Academico/templates/index_master.html
+++ b/Aplicaciones/Academico/templates/index_master.html
@@ -256,7 +256,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a class="dropdown-item d-flex align-items-center" href="/members/logout_user">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
@@ -483,9 +483,9 @@
       </li><!-- End Register Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-login.html">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
+        <a class="nav-link collapsed" href="/members/logout_user">
+          <i class="bi bi-box-arrow-in-left"></i>
+          <span>Log Out</span>
         </a>
       </li><!-- End Login Page Nav -->
 
@@ -527,7 +527,7 @@
           <div class="row">
             {% block body %}
 
-            
+
             {% endblock %}
           
            
