--- a/Aplicaciones/Academico/templates/index_master.html
+++ b/Aplicaciones/Academico/templates/index_master.html
@@ -295,8 +295,8 @@
             </a>
           </li>
           <li>
-            <a href="components-accordion.html">
-              <i class="bi bi-circle"></i><span>Accordion</span>
+            <a href="/events">
+              <i class="bi bi-circle"></i><span>Eventos</span>
             </a>
           </li>
           <li>
