--- a/Aplicaciones/Academico/templates/events.html
+++ b/Aplicaciones/Academico/templates/events.html
@@ -3,13 +3,17 @@
 {% block title %} Listar Eventos {% endblock  %}
 
 {% block body %}
-{% for event in event_list %}
-    {{event.name}} </br>
-    Atendees: 
-    {%  for temp in event.attendees.all%}
-    {{temp.first_name}}  {{temp.last_name}}
+    {% for event in event_list %}
+        </br>   
+            <!-- Default Card -->
+            <div class="card">
+                <div class="card-body">
+                <h5 class="card-title">{{event.name}}</h5>
+                Atendees: 
+                {%  for temp in event.attendees.all%}
+                    {{temp.first_name}}  {{temp.last_name}}
+                {% endfor %}
+                </div>
+            </div><!-- End Default Card -->   
     {% endfor %}
-</br>
-{% endfor %}
-
 {% endblock  %}
